# VW_AI---v1.0

New Folder/app/: app.py
New Folder/app/smart_walker_ai/: CMakeLists.txt  package.xml
New Folder/app/smart_walker_ai/agent_config/: agent_configuration.yaml
New Folder/app/smart_walker_ai/config/: SemanticDescription.txt  StructuredDescription.json
New Folder/app/smart_walker_ai/retriever_data/json/: chunks.csv  chunks.index
New Folder/app/smart_walker_ai/retriever_data/pdf/: chunks.csv  chunks.index
New Folder/app/smart_walker_ai/smart_walker_ai/: __init__.py  create_path.py  navigation_ai_node.py  path_generator_ia.py  path_generator_ia_2.py
New Folder/app/smart_walker_ai/smart_walker_ai/lcad_retrieval/: create_faiss_index.py  example.py  lcad_retriever.py  ollama_embedding.py
New Folder/app/smart_walker_ai/smart_walker_ai/utils/: json_func.py  ollama_functions.py
New Folder/app/smart_walker_ai_msgs/: CMakeLists.txt  package.xml
New Folder/app/smart_walker_ai_msgs/action/: LlmContextual.action
New Folder/app/smart_walker_ai_msgs/msg/: LlmGoalPose.msg  LlmResponse.msg
New Folder/app/templates/: home.html
New Folder/app/utils/: agent_prompt.py  agent_tools.py  ollama_functions.py  teste2.py  tst.py
